<package>
  <description>

     This package provides a teleoperation node to move a pan-tilt camera,
     zoom in/out, open/close the iris, etc.

  </description>
  
  <name>pan_tilt_camera_teleop</name>
  <version>0.1.1</version>

  <author email="dfornas@uji.es">David Fornas</author>
  <maintainer email="dfornas@uji.es">David Fornas</maintainer>
  <license>BSD</license>
  
  <url>http://ros.org/wiki/pan_tilt_camera_teleop</url>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visp</build_depend>
  <build_depend>mar_perception</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visp</run_depend>
  <run_depend>mar_perception</run_depend>
  
</package>


